# claude-symphony

./: CHANGELOG.md  CLAUDE.md  NOTICE  PRD.md  README.md  WORKFLOW.example.md  preview_dashboard.py  pyproject.toml  workflow.example.yaml
.claude/commands/: release.md
claude_symphony/: __init__.py  __main__.py  config.py  events.py  init.py  linear.py  main.py  models.py  orchestrator.py  prompt.py  runner.py  tracking.py  web.py  workspace.py
examples/: create-ticket.md
stages/: implement.example.md  investigate.example.md  review.example.md
stokowski/: config.py  models.py  orchestrator.py  web.py
tests/: conftest.py  test_cli.py  test_config.py  test_events.py  test_linear.py  test_orchestrator.py  test_prompt.py  test_runner.py  test_tracking.py  test_workspace.py
