[project]
name = "claude-symphony"
version = "0.2.0"
description = "Orchestrate Claude Code agents driven by Linear issues"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Sugar & Coffee", email = "josh@sugarandcoffee.co.uk" }]
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "rich>=13.0",
]

[project.optional-dependencies]
web = ["fastapi>=0.115", "uvicorn>=0.32"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[project.urls]
Homepage = "https://github.com/alejandro-alarcon-t/claude-symphony"
Repository = "https://github.com/alejandro-alarcon-t/claude-symphony"

[project.scripts]
claude-symphony = "claude_symphony.main:cli"
